# Polidex

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  schemas.py
backend/app/api/routes/: api_keys.py  chat.py  documents.py  query.py  spaces.py  stats.py
backend/app/core/: auth.py  openrouter.py
backend/app/models/: __init__.py  api_key.py  database.py  document.py  query_log.py  space.py
backend/app/services/: api_key_service.py  chunker.py  document_processor.py  embedder.py  query_logger.py  rag_pipeline.py  seed.py  vector_store.py
backend/migrations/: 001_add_usage_columns.py
backend/seed_data/: api_documentation.md  faq.md  product_guide.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ApiKeys.tsx  Chat.tsx  Dashboard.tsx  Documents.tsx  Spaces.tsx  Usage.tsx
frontend/src/types/: api.ts
